UI fixes and query optimizations A bit cleaner adding item to favorites
